# talisman-astar-dapp

./: Cargo.toml  README  README.md  lib.rs  subscan_contract_hash_submission.yaml
.github/workflows/: submit-hash-to-subscan.yml
